# qt-demo

./: .gitignore  README.md
console/: console.pro
dashboard/: dashboard.pro
qt-quick/: CMakeLists.txt  backend.cpp  backend.h  conanbuildinfo.cmake  conanfile.txt  conaninfo.txt  main.cpp  qt-quick.pro
qt-quick/qml/qt-quick/: main.qml
widget/: widget.pro
